# rec-paper-bot

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  init_db.py  pyproject.toml
.devcontainer/: devcontainer.json
rec_paper_bot/: schemas.py
rec_paper_bot/dags/: classification.py  crawling.py  posting.py  summarizing.py
rec_paper_bot/lib/: __init__.py  alert_callback.py  classifier.py  poster.py  summarizer.py
rec_paper_bot/tasks/: __init__.py  classify_paper.py  generate_search_query.py  get_summary.py  log_post_time.py  post_paper_summary.py  sample_no_classified_paper.py  sample_no_summarized_papers.py  sample_summarized_but_not_posted_papers.py  save_paper_class_to_database.py  save_paper_summary_to_database.py  save_papers_to_database.py  search_for_papers.py  summarize_abstract.py
