[project]
name = "rec-paper-bot"
version = "1.0.0"
description = ""
authors = [
    {name = "Kai Sugahara",email = "contact@kais.jp"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license="Apache-2.0"
dependencies = [
    "polars (>=1.31.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "apache-airflow (>=3.0.2,<4.0.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "tweepy (>=4.16.0,<5.0.0)",
    "twitter-text-parser (>=3.0.0,<4.0.0)",
    "tweepy (>=4.16.0,<5.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "google-genai (>=1.25.0,<2.0.0)",
    "flask-appbuilder (>=4.8.0,<5.0.0)",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.12.3"
scikit-learn = "^1.6.1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
